# VFH_Avoidance

./: README.md
install/: local_setup.sh  setup.sh
install/px4_avoidance/share/px4_avoidance/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/px4_msgs/include/px4_msgs/px4_msgs/msg/detail/: actuator_armed__struct.hpp  actuator_controls_status__struct.hpp  actuator_motors__struct.hpp  actuator_outputs__struct.hpp  airspeed_validated__struct.hpp  arming_check_reply__struct.hpp  arming_check_request__struct.hpp  autotune_attitude_control_status__struct.hpp  battery_status__struct.hpp  camera_capture__struct.hpp  camera_status__struct.hpp  can_interface_status__struct.hpp  cellular_status__struct.hpp  collision_constraints__struct.hpp  control_allocator_status__struct.hpp  dataman_response__struct.hpp  debug_key_value__struct.hpp  debug_vect__struct.hpp  differential_pressure__struct.hpp  dronecan_node_status__struct.hpp  esc_report__builder.hpp  esc_report__struct.h  esc_report__traits.hpp  esc_report__type_support.c  estimator_aid_source3d__struct.hpp  estimator_bias3d__struct.hpp  estimator_bias__struct.hpp  estimator_sensor_bias__struct.hpp  estimator_states__struct.hpp  estimator_status__struct.hpp  estimator_status_flags__struct.hpp  failsafe_flags__struct.hpp  geofence_status__struct.hpp  (+90 more)
install/px4_msgs/share/px4_msgs/: package.sh
install/px4_msgs/share/px4_msgs/msg/: EscReport.json  EscStatus.json  VehicleStatus.json
log/: latest_build
px4_avoidance/: CMakeLists.txt  plot_histogram.py
px4_avoidance/include/px4_avoidance/: binary_histogram.hpp  candidate_search.hpp  cost_function.hpp  histogram_grid.hpp  lidar_processing.hpp  odom_tf.hpp  offboard_controll.hpp  polar_histogram.hpp
px4_avoidance/src/: binary_histogram.cpp  candidate_search.cpp  cost_function.cpp  histogram_grid.cpp  lidar_processing.cpp  odom_tf.cpp  offboard_controll.cpp  polar_histogram.cpp  vfh_star_node.cpp
